--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-observe",
-  "version": "2.0.3",
+  "version": "3.0.0",
   "description": "Angular directive for representing the different states of an Observable.",
   "main": "./dist/angular-observe.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ggoodman/angular-observe#readme",
   "devDependencies": {
+    "lodash": "^3.10.1",
     "webpack": "^1.12.9"
   }
 }
